Final Version of Idea #2

--- a/02.Rmd
+++ b/02.Rmd
@@ -2,9 +2,9 @@
 
 #### Keywords
 
-Online Travel Agency (OTA), Travel Destination, Tourism Product, Precision Marketing, Social Media
+Online Travel Agency (OTA), Travel Destination, Tourism Product, Precision Marketing, Social Media, Nature Language Processing (NLP)
 
-## Tourists Require Better Personalized Tourism Products and Precision Marketing in the Digital Age.
+## Tourists Require Better Personalized Tourism Products from OTAs in the Digital Age.
 
 Thanks to the development of internet, social media and travel websites, people have more places of interests around the world to visit, make travel plan online, share happiness and experience to their social network, and motivate the other people to plan for a trip (Skift Report 2017)[^1].
 
@@ -24,32 +24,30 @@ In addition, more and more travelers tend to have personalized travel plan inste
 <a href="https://skift.com/2017/08/25/5-charts-showing-the-rise-of-independent-chinese-travelers/"> Travel Arrangement for Most Recent Trip and Next Trip, May 2017 </a>
 </p>
 
-However, online travel agencies (OTAs) are still displaying the travel packages quoted individually from hotel, airline, rental cars, etc.. There are not enough integrated online t tourism products meeting the needs of those emerging independent Chinese travelers, who is looking for tourism products with novelty, convenience, flexibility, and personalization. If an online travel agency websites can help utilize the data from the travelers’ online footprints and provided personized tourism products to them, it would create the benefits for both travelers and online travel agencies.
+So, instead of traditional travel agencies (TA) offering group tour service, more and more independent travelers are interested in service from online travel agencies (OTA), such as Expedia, Priceline, Ctrip, Fliggy Alibaba, etc. Especially the personalized tourism products from OTAs, distinguished from the traditional travel packages, which simple include quote of hotel price, airline tickets, and sometimes rental car rate. The personalized tourism products would be a combination of almost anything you need in a travel, including the recommendation of interesting travel destinations, hotel and transportation, tickets of local places of interests and events, restaurants recommendations and coupons, local travel guild, personal online assistant while traveling, social events, etc. 
 
-Also, the marketing campaigns of those new tourism products are also not making full use of the data to help Sales & Marketing department to make the right decision of precision marketing. For example, Fliggy, the OTA brand of Alibaba, promoted a tourism product of the Aurora Trip to Finland by collaborating with a lot of famous brands to maximize the exposure to 300 million; but the final sale of the product is only 5000, with the conversion rate less than 0.002% (Xinhua News 2017)[^2]. 
-
-In a word, the utilizing of data from users’ online activities can help OTAs find the potential high demand of travel destinations, provide more personalized tourism products, and implement better precision marketing, in order to gain better revenue outcome and tourists’ experience. 
+However, nowadays, most OTAs are still displaying the traditional travel packages. There are not enough integrated online tourism products meeting the needs of those emerging independent travelers, who is looking for tourism products with novelty, convenience, flexibility, and personalization. Therefore, if OTAs can have a data science team and utilize the data from the travelers’ online footprints and provided personized tourism products to them, it would create huge benefits for travelers, OTAs and destination local communities.
 
 
-## Data from Digital World Can Help Identify the Hot Travel Destinations.
+## Data from Digital World Can Help OTAs Identify the Hot Travel Destinations.
 
-There must be a large amount of data that we can utilize to understand the tourists better and have smarter decisions. The data source can be the review data from travel websites (TripAdvisor, Meituan-Dianping, Yelp, etc.), the recent travel-related hot topics in social media (Facebook, Twitter, Weibo, WeChat, QQ, etc.), airline arrangement and change, local events, statistic reports from Tourism Department, etc. The object of the data science work is to use those data online and figure out trending travel destinations and relevant groups of tourists. 
+There must be a large amount of data that we, an OTA data science team, can utilize to understand the tourists better and have smarter decisions. The data source can be the review data from travel websites (TripAdvisor, Meituan-Dianping, Yelp, etc.), the recent travel-related hot topics in social media (Facebook, Twitter, Weibo, WeChat, QQ, etc.), airline arrangement and change, local events, statistic reports from Tourism Department, global economy, security and exchange rate volatility, etc. The object of the data science work is to use those data online and figure out trending travel destinations and targeting groups of tourists.  
 
-As for the technologies, Nature Language Processing with Deep Learning must be the key of the project, since most data source comes as unstructured nature language. Statistic technics and Machine Learning tools will also be used to analyze Tourism Department data, airline data, and local events data. 
+As for the technologies, Nature Language Processing with Deep Learning will be the key of the project, since most data source comes as unstructured nature language. Statistic technics and Machine Learning tools will also be used to analyze Tourism Department data, airline data, and local events data. 
 
-To conceptualize the project, in the first stage of the project, we can focus on identifying the hot travel destinations. And operational metrics of the hot travel destination can be a comprehensive score measuring multiple aspects, such as distance from the tourists, frequency of being positively mentioned in the social media within a given period, review scores, airline arrangement, number and quality of events, etc. The higher the score, the higher demand that the destination will be. Then the OTAs can pick up those destinations to develop a tourism products and marketing them.  
+To conceptualize the project, in the first stage of the project, we can focus on identifying the hot travel destinations. And operational metrics of the hot travel destination can be a comprehensive score measuring multiple aspects, such as distance from the tourists, frequency of being positively mentioned in the social media within a given period, review scores, airline arrangement, number and quality of events, security score, currency exchange rate, etc. The higher the score, the higher demand that the destination will be. Then the operation team from OTAs can use the analysis results from data science team and pick up those destinations to develop a tourism products and marketing them.    
 
 
 ## A Win-win-win Project for Tourists, OTAs, and Local Communities.
 
 With the help of Data Science technics, the massive data from websites can help OTAs identify high-demand travel destinations and related group of customers; develop the products and price max affordable price to those identified customers, and target marketing those customers; then finally generate revenue and customer loyalty for OTAs, bring economic benefits to local community, and provide happiness and great moments to tourists. 
 
-However, the data we collected is hard to found attracting destinations that seldom have tourists visited, such as a beautiful valley, a peaceful and remoted village, etc.  Also, identifying the travel destination is only the first step of the whole project, the next step is to develop a attracting tourism products, then have the precision marketing implemented to make sure we reach those identified customers. 
+However, the online social media data we collected make it hard to found attracting destinations that seldom have tourists visited, such as a remoted valley, a peaceful village, etc.  Also, identifying the travel destination is only the first step of the whole project, the next step is to develop attracting tourism products, then have the precision marketing implemented to make sure we reach those identified customers.  
 
-All in all, it must be a win-win-win project for Tourists, OTAs, and Local Communities!
+All in all, it must be a win-win-win project for tourists, OTAs, and local communities!
 
 
 [^1]:Skift. (2017). Skift. 5 Charts Showing the Rise of Independent Chinese Travelers.. Retrieved from: https://skift.com/2017/08/25/5-charts-showing-the-rise-of-independent-chinese-travelers/.
 
 
-[^2]:Xinhuanet. (2017). Xinhuanet. Finland eyes bigger share of China's booming outbound tourism market.. Retrieved from: http://news.xinhuanet.com/english/2017-07/01/c_136409634.htm.
+
