--- a/02.Rmd
+++ b/02.Rmd
@@ -2,20 +2,20 @@
 
 #### Keywords
 
-Online Travel Agency (OTA), Travel Destination, Tourism Product, Precision Marketing, Social Media, Nature Language Processing (NLP)
+Online Travel Agency (OTA), Travel Destination, Tourism Product, Precision Marketing, Social Media, Natural Language Processing (NLP)
 
 ## Tourists Require Better Personalized Tourism Products from OTAs in the Digital Age.
 
-Thanks to the development of internet, social media and travel websites, people have more places of interests around the world to visit, make travel plan online, share happiness and experience to their social network, and motivate the other people to plan for a trip (Skift Report 2017)[^1].
+Thanks to the development of the internet, social media and travel websites, people have more places of interests around the world to visit, make travel plans online, share happiness and experiences to their social network, and motivate other people to plan for a trip (Skift Report 2017)<sup>1</sup>.
 
 <p align="center">
 <img src="https://3rxg9qea18zhtl6s2u8jammft-wpengine.netdna-ssl.com/wp-content/uploads/2017/08/Screen-Shot-2017-08-23-at-3.48.42-PM.png" alt="Most-Used Resources for Oversea Trip Planing in 2017" width="400" height="350">
 </p>
 <p align="center">
-<a href="https://skift.com/2017/08/25/5-charts-showing-the-rise-of-independent-chinese-travelers/"> Most-Used Resources for Oversea Trip Planing in 2017</a>
+<a href="https://skift.com/2017/08/25/5-charts-showing-the-rise-of-independent-chinese-travelers/"> Most-Used Resources for Oversea Trip Planning in 2017</a>
 </p>
 
-In addition, more and more travelers tend to have personalized travel plan instead of mass tour group products. For example, in 2017, more than 135 million Chinese are projected to travel abroad, making China the world’s largest outbound travel market, and 70 percent of Chinese outbound travelers plan to either make their own travel arrangements or buy a travel package but travel on their own for their next overseas trip (Skift Report 2017)[^1].
+In addition, more and more travelers tend to have personalized travel plans instead of purchasing mass tour group products. For example, in 2017 more than 135 million Chinese are projected to travel abroad, making China the world’s largest outbound travel market. 70 percent of Chinese outbound travelers plan to either make their own travel arrangements or buy a travel package but travel on their own for their next overseas trip (Skift Report 2017)<sup>1</sup>.
 
 <p align="center">
 <img src="https://3rxg9qea18zhtl6s2u8jammft-wpengine.netdna-ssl.com/wp-content/uploads/2017/08/Screen-Shot-2017-08-23-at-3.47.46-PM.png" alt="Travel Arrangement for Most Recent Trip and Next Trip, May 2017" width="400" height="350">
@@ -24,25 +24,25 @@ In addition, more and more travelers tend to have personalized travel plan inste
 <a href="https://skift.com/2017/08/25/5-charts-showing-the-rise-of-independent-chinese-travelers/"> Travel Arrangement for Most Recent Trip and Next Trip, May 2017 </a>
 </p>
 
-So, instead of traditional travel agencies (TA) offering group tour service, more and more independent travelers are interested in service from online travel agencies (OTA), such as Expedia, Priceline, Ctrip, Fliggy Alibaba, etc. Especially the personalized tourism products from OTAs, distinguished from the traditional travel packages, which simple include quote of hotel price, airline tickets, and sometimes rental car rate. The personalized tourism products would be a combination of almost anything you need in a travel, including the recommendation of interesting travel destinations, hotel and transportation, tickets of local places of interests and events, restaurants recommendations and coupons, local travel guild, personal online assistant while traveling, social events, etc. 
+More and more independent travelers are interested in services from online travel agencies (OTA), such as Expedia, Priceline, Ctrip, and Fliggy Alibaba rather than traditional travel agencies (TA) that offer group tour services. Traditional travel packages typically include a quote for a hotel price, airline tickets, and sometimes a rental car rate. The personalized tourism products would be a combination of almost anything you need in travel, including recommendations of interesting travel destinations, hotel and transportation, tickets to local places of interests and events, restaurants recommendations and coupons, local travel guides, personal online assistant while traveling, social events, etc. 
 
-However, nowadays, most OTAs are still displaying the traditional travel packages. There are not enough integrated online tourism products meeting the needs of those emerging independent travelers, who is looking for tourism products with novelty, convenience, flexibility, and personalization. Therefore, if OTAs can have a data science team and utilize the data from the travelers’ online footprints and provided personized tourism products to them, it would create huge benefits for travelers, OTAs and destination local communities.
+However, most OTAs are still displaying the traditional travel packages. This is a missed opportunity for OTAs, who are in a better position to provide personalized tourism products than traditional travel agencies. There are not enough integrated online tourism products meeting the needs of those emerging independent travelers, who are looking for tourism products with novelty, convenience, flexibility, and personalization. OTAs have an opportunity to use data science to utilize data from the travelers’ online footprints and provide personalized tourism products to them, which would create huge benefits for travelers, OTAs and destination local communities.
 
 
-## Data from Digital World Can Help OTAs Identify the Hot Travel Destinations.
+## Data from the Digital World Can Help OTAs Identify Hot Travel Destinations.
 
-There must be a large amount of data that we, an OTA data science team, can utilize to understand the tourists better and have smarter decisions. The data source can be the review data from travel websites (TripAdvisor, Meituan-Dianping, Yelp, etc.), the recent travel-related hot topics in social media (Facebook, Twitter, Weibo, WeChat, QQ, etc.), airline arrangement and change, local events, statistic reports from Tourism Department, global economy, security and exchange rate volatility, etc. The object of the data science work is to use those data online and figure out trending travel destinations and targeting groups of tourists.  
+There is a large amount of data that we, an OTA data science team, can utilize to understand the tourists better and make smarter decisions. Data sources include review data from travel websites (TripAdvisor, Meituan-Dianping, Yelp, etc.), recent travel-related hot topics in social media (Facebook, Twitter, Weibo, WeChat, QQ, etc.), airline arrangements and changes, local events, statistic reports from Tourism Departments, global economic factors and security and exchange rate volatility, among others. The object of the data science work is to use those data to figure out trending travel destinations and target groups of tourists.  
 
-As for the technologies, Nature Language Processing with Deep Learning will be the key of the project, since most data source comes as unstructured nature language. Statistic technics and Machine Learning tools will also be used to analyze Tourism Department data, airline data, and local events data. 
+As for the technologies, natural language processing with deep learning will be the key of the project, since most of the data sources comes as unstructured natural language. Statistical techniques and machine learning tools will also be used to analyze tourism department data, airline data, and local events data. 
 
-To conceptualize the project, in the first stage of the project, we can focus on identifying the hot travel destinations. And operational metrics of the hot travel destination can be a comprehensive score measuring multiple aspects, such as distance from the tourists, frequency of being positively mentioned in the social media within a given period, review scores, airline arrangement, number and quality of events, security score, currency exchange rate, etc. The higher the score, the higher demand that the destination will be. Then the operation team from OTAs can use the analysis results from data science team and pick up those destinations to develop a tourism products and marketing them.    
+In the first stage of the project, we can focus on identifying the hot travel destinations. For each destination, we would create a comprehensive score measuring multiple aspects, such as distance from the tourists, frequency of being positively mentioned in the social media within a given period, review scores, airline arrangements, the number and quality of events, security and safety rankings, currency exchange rate, etc. The higher the score, the higher demand that the destination will have. Then the operations team from the OTA can use the analysis results from the data science team and pick up those destinations to develop tourism products and market them.    
 
 
 ## A Win-win-win Project for Tourists, OTAs, and Local Communities.
 
-With the help of Data Science technics, the massive data from websites can help OTAs identify high-demand travel destinations and related group of customers; develop the products and price max affordable price to those identified customers, and target marketing those customers; then finally generate revenue and customer loyalty for OTAs, bring economic benefits to local community, and provide happiness and great moments to tourists. 
+There are some limitations here. The online social media data we use makes it hard to find attractive destinations without tourist traffic, such as remote valleys and peaceful villages.  Also, identifying the travel destination is only the first step of the whole project; the next step is to develop attractive tourism products, then having the precision marketing implemented to make sure we reach those identified customers.  
 
-However, the online social media data we collected make it hard to found attracting destinations that seldom have tourists visited, such as a remoted valley, a peaceful village, etc.  Also, identifying the travel destination is only the first step of the whole project, the next step is to develop attracting tourism products, then have the precision marketing implemented to make sure we reach those identified customers.  
+Despite these limitations, with the help of data science techniques the massive data from websites can help OTAs identify high-demand travel destinations and related groups of customers; develop the products and price max affordable to those identified customers; then target marketing to those customers; then finally generate revenue and customer loyalty for OTAs, bring economic benefits to local communities, and provide happiness and great moments to tourists. 
 
 All in all, it must be a win-win-win project for tourists, OTAs, and local communities!
 
